# VideoPlayer

./: CMakeLists.txt  main.cpp
core/: player.cpp
src/: player.cpp
