CMAKE_MINIMUM_REQUIRED(VERSION 3.17)

PROJECT(VideoPlayer C CXX)

SET(CMAKE_CXX_STANDARD 11)
SET(PLAYER_VERSION 1.0.1)
SET(VIDEO_PLAYER_SRC_DIR "${CMAKE_CURRENT_SOURCE_DIR}/core")

FIND_PACKAGE(PkgConfig REQUIRED)

# Check SDL2 and FFmpeg libraries
PKG_CHECK_MODULES(SDL2 REQUIRED IMPORTED_TARGET sdl2)
PKG_CHECK_MODULES(FFMPEG REQUIRED IMPORTED_TARGET libavcodec libavformat libavutil libswscale)

INCLUDE_DIRECTORIES(${VIDEO_PLAYER_SRC_DIR})

ADD_EXECUTABLE(${PROJECT_NAME} main.cpp)

TARGET_LINK_LIBRARIES(${PROJECT_NAME} PRIVATE PkgConfig::FFMPEG PkgConfig::SDL2)
